--- a/index.css
+++ b/index.css
@@ -25,6 +25,10 @@ a {
     color: #D97E00;
 }
 
+input:hover {
+    outline: none;
+}
+
 .hidden {
     display: none;
 }
@@ -56,6 +60,11 @@ a {
     box-shadow: 0 5px 3px -3px rgba(0,0,0,.25);
 }
 
+
+.top-shadow {
+    box-shadow: 0 -3px 3px -3px rgba(0,0,0,.25);
+}
+
 .box {
     margin: 0 auto 30px;
     width: calc(100% - 60px);
@@ -63,15 +72,15 @@ a {
 }
 
 .client-info {
-    display: grid;
-    grid-template-columns: 1fr auto;
 
     padding: 30px;
 }
 
 .user-icon {
-    width: 200px;
-    margin-left: 30px;
+    min-width: 160px;
+    width: 160px;
+    height: 160px;
+    margin-left: auto;
 }
 
 .page-name {
@@ -86,7 +95,7 @@ a {
 }
 
 .top-line {
-    border-top: 5px solid #F69C00;
+    border-top: 6px solid #F69C00;
 }
 
 .contacts {
@@ -104,9 +113,10 @@ a {
 
 .button {
     height: 32px;
-    margin-top: 30px;
     padding: 0 15px;
     font: 14px 'Segoe UI';
+    line-height: 32px;
+    vertical-align: bottom;
     border: none;
     border-radius: 1px;
     box-shadow: 0 1px 0 0 rgba(0, 0, 0, .15), 0 0 0 1px rgba(0, 0, 0, .15);
@@ -121,19 +131,32 @@ a {
     color: #fff;
 }
 
-.button:hover {
+.button:hover,
+.nds18:checked ~ .nds18-button,
+.nds10:checked ~ .nds10-button,
+.nds0:checked ~ .nds0-button {
     filter: brightness(90%);
 }
 
-.button:hover:active {
+.button:hover:active,
+.nds18:checked ~ .nds18-button,
+.nds10:checked ~ .nds10-button,
+.nds0:checked ~ .nds0-button {
     box-shadow: 0 1px 0 0 rgba(0, 0, 0, .15),
                 0 0 0 1px rgba(0, 0, 0, .15),
           inset 0 5px 10px -5px rgba(0,0,0, .5);
 }
 
+.menu {
+    padding: 30px 30px 0;
+}
+
 .actions {
     display: flex;
-    padding: 30px 30px 0 30px;
+}
+
+.actions-inline {
+    margin-bottom: 30px;
 }
 
 .action-name {
@@ -147,14 +170,18 @@ a {
 }
 
 .trigger-pay:checked ~ .page .action-pay,
-.trigger-request:checked ~ .page .action-request {
+.trigger-request:checked ~ .page .action-request,
+.trigger-payment-any:checked ~ .actions .payment-any,
+.trigger-payment-own:checked ~ .actions .payment-own {
     border-bottom: 3px solid #F69C00;
     color: #D97E00;
     cursor: default;
 }
 
 .trigger-pay:checked ~ .page .payment,
-.trigger-request:checked ~ .page .request {
+.trigger-request:checked ~ .page .request,
+.trigger-payment-any:checked ~ .any,
+.trigger-payment-own:checked ~ .own {
     display: block;
 }
 
@@ -163,13 +190,19 @@ a {
     padding: 30px;
 }
 
-.form {
-    margin-top: 60px;
-    margin-left: auto;
+.fields {
+    margin: 60px 0;
+}
+
+.card-fields {
+    margin-left: 30px;
 }
 
 .form-label {
     display: inline-block;
+}
+
+.em12 {
     width: 12em;
 }
 
@@ -187,6 +220,10 @@ a {
     box-shadow: inset 0 1px 4px -2px rgba(0,0,0,.25);
 }
 
+.em9 {
+    width: 9em; 
+}
+
 .form-input::placeholder {
     color: #999;
 }
@@ -198,4 +235,94 @@ a {
 
 .capture {
     font-size: 14px;
+}
+
+.switch {
+    display: inline-flex;
+    padding-left: 2px;
+}
+
+.menu-small {
+    padding-bottom: 5px;
+}
+
+.card {
+    margin: 30px 0 auto;
+    padding: 100px 5px 5px;
+    border-radius: 5px;
+    width: 300px;
+    background-color: #e5e5e5;
+}
+
+.input100 {
+    width: calc(100% - 22px);
+}
+
+.any,
+.own {
+    display: none;
+}
+
+.em3 {
+    width: 3em;
+}
+
+.columns-2 {
+    display: flex;
+}
+
+.column-1 {
+    flex: 1;
+}
+
+.about {
+    padding: 30px;
+}
+
+@media only screen and (max-width: 677px) {
+    .columns-2 {
+        flex-direction: column;
+    }
+
+    .column-1 {
+        flex: auto;
+    }
+
+    .user-icon {
+        margin: 30px auto 0;
+    }
+
+    .form-label {
+        display: block;
+    }
+
+    .form-input {
+        width: calc(100% - 20px);
+    }
+
+    .switch {
+        width: calc(100% - 2px);
+    }
+
+    .nds18-button,
+    .nds10-button,
+    .nds0-button {
+        width: 100%;
+        text-align: center;
+        padding: 0;
+    }
+
+    .box {
+        margin: 0;
+        width: 100%;
+    }
+
+    .card {
+        width: 100%;
+        padding: 5px;
+    }
+
+    .card-fields {
+        margin: 0;
+    }
 }
