--- a/index.css
+++ b/index.css
@@ -1,125 +1,207 @@
 body {
     margin: 0;
-    font: 16px 'Segoe UI';
+    font: 18px 'Segoe UI';
     background-color: #e5e5e5;
 }
 
-h1 {
-    font: 20px 'Segoe UI';
+.header {
+    position: sticky;
+    z-index: 100;
+    top: 0;
+
+    padding: 0 30px;
+    height: 48px;
+
+    color: #F69C00;
+}
+
+.capture {
+    font-size: 14px;
+    position: relative;
+    top: -10px;
+}
+
+.bg-gray {
+    background-color: #f2f2f2;
+}
+
+.title {
+    font-size: 20px;
     font-weight: 600;
     margin: 0;
 }
 
-h2 {
-    font: 32px 'Segoe UI Semilight';
+.heading {
+    font: 32px 'Segoe UI Light';
+    line-height: 38px;
     margin: 0;
 }
 
-p, a {
-    font: 18px 'Segoe UI';
-    margin: 0;
-}
-
-a {
+.link {
     text-decoration: none;
     color: #D97E00;
 }
 
-input:hover {
-    outline: none;
-}
-
-.hidden {
-    display: none;
-}
-
-.header {
-    z-index: 100;
-    position: fixed;
-    top: 0;
-
-    padding: 0 30px;
-    color: #F69C00;
-    width: 100%;
-    height: 48px;
-}
-
 .page {
-    padding-top: 48px;
-}
-
-.white {
-    background-color: #fff;
-}
-
-.shadow {
-    box-shadow: 0 0 5px 0 rgba(0,0,0,.25);
-}
-
-.bottom-shadow {
-    box-shadow: 0 5px 3px -3px rgba(0,0,0,.25);
-}
-
-
-.top-shadow {
-    box-shadow: 0 -3px 3px -3px rgba(0,0,0,.25);
+    max-width: 900px;
+    margin: auto;
 }
 
 .box {
-    margin: 0 auto 30px;
-    width: calc(100% - 60px);
-    max-width: 900px;
+    box-shadow: 0 0 5px 0 rgba(0,0,0,.25);
+    background-color: #fff;
 }
 
-.client-info {
-
-    padding: 30px;
-}
-
-.user-icon {
-    min-width: 160px;
-    width: 160px;
-    height: 160px;
-    margin-left: auto;
-}
-
-.page-name {
-    margin: auto;
-    width: calc(100% - 60px);
-    max-width: 900px;
-    padding: 20px 30px;
-}
-
-.secondary {
-    background-color: #f2f2f2;
-}
-
-.top-line {
+.page__top-line {
     border-top: 6px solid #F69C00;
 }
 
-.contacts {
+.box__container {
+    box-shadow: inset 0 5px 3px -3px rgba(0,0,0,.25);
+    padding: 30px;
+}
+
+.box__first-container {
+    box-shadow: none;
+}
+
+.box__block {
+    padding: 15px 0;
+}
+
+.box__client-info__contacts,
+.box__form__fields {
+    flex: 1;
+}
+
+.box__client-info__user-icon {
+    margin-left: auto;
+    min-width: 160px;
+    width: 160px;
+    height: 160px;
+}
+
+.box__bottom-tabs {
+    position: relative;
+    top: 30px;
     display: flex;
+}
+
+.box__tabs,
+.box__card-form,
+.box__client-info {
+    display: flex;
+}
+
+.box__form,
+.box__card-form {
+    padding: 30px 0 0;
+}
+
+.box__tab {
+    margin-right: 30px;
+    padding-bottom: 10px;
+}
+
+.box__tab:hover {
+    color: #D97E00;
+    cursor: pointer;
+}
+
+.box__action-pay,
+.box__action-request,
+.box__payment-any,
+.box__payment-own {
+    display: none;
+}
+
+.box__form__card {
+    margin-right: 30px;
+    padding: 110px 5px 5px;
+    border-radius: 5px;
+    width: 300px;
+    background-color: #e5e5e5;
+}
+
+.trigger__action-pay:checked ~ .box__container .action-pay,
+.trigger__action-request:checked ~ .box__container .action-request,
+.trigger__payment-any:checked ~ .box__tabs .payment-any,
+.trigger__payment-own:checked ~ .box__tabs .payment-own {
+    border-bottom: 3px solid #F69C00;
+    color: #D97E00;
+    cursor: default;
+}
+
+.trigger__action-pay:checked ~ .box__action-pay,
+.trigger__action-request:checked ~ .box__action-request,
+.trigger__payment-any:checked ~ .box__payment-any,
+.trigger__payment-own:checked ~ .box__payment-own {
+    display: block;
+}
+
+.contacts__line,
+.items {
     flex-wrap: wrap;
+    display: flex;
 }
 
 .contact {
-    margin-right: 30px;
-}
-
-.margin {
-    margin: 15px 0;
+    margin: 0 30px 0 0;
 }
 
 .button {
     height: 32px;
     padding: 0 15px;
+
+    vertical-align: bottom;
     font: 14px 'Segoe UI';
     line-height: 32px;
-    vertical-align: bottom;
+
     border: none;
     border-radius: 1px;
     box-shadow: 0 1px 0 0 rgba(0, 0, 0, .15), 0 0 0 1px rgba(0, 0, 0, .15);
+}
+
+.switch {
+    display: inline-flex;
+    padding-left: 2px;
+}
+
+.input-text {
+    margin: 1px;
+    padding: 6px 9px;
+
+    height: 20px;
+    min-width: 244px;
+
+    font: 16px 'Segoe UI Light';
+
+    border: 1px solid #e5e5e5;
+    border-radius: 1px;
+    box-shadow: inset 0 1px 4px -2px rgba(0,0,0,.25);
+
+    outline: none;
+}
+
+.input-text:focus {
+    margin: 0;
+    border: 2px solid #F69C00;
+}
+
+.input-date,
+.input-code {
+    min-width: auto;
+    width: 3em;
+}
+
+.input-sum {
+    min-width: auto;
+    width: 7em;
+}
+
+.card-form__input-comment,
+.card-form__input-email {
+    width: calc(100% - 13em);
 }
 
 .white-button {
@@ -132,197 +214,88 @@ input:hover {
 }
 
 .button:hover,
-.nds18:checked ~ .nds18-button,
-.nds10:checked ~ .nds10-button,
-.nds0:checked ~ .nds0-button {
+.trigger__nds-18:checked ~ .box__container .nds-18,
+.trigger__nds-10:checked ~ .box__container .nds-10,
+.trigger__nds-0:checked ~ .box__container .nds-0 {
     filter: brightness(90%);
 }
 
 .button:hover:active,
-.nds18:checked ~ .nds18-button,
-.nds10:checked ~ .nds10-button,
-.nds0:checked ~ .nds0-button {
+.trigger__nds-18:checked ~ .box__container .nds-18,
+.trigger__nds-10:checked ~ .box__container .nds-10,
+.trigger__nds-0:checked ~ .box__container .nds-0 {
     box-shadow: 0 1px 0 0 rgba(0, 0, 0, .15),
                 0 0 0 1px rgba(0, 0, 0, .15),
           inset 0 5px 10px -5px rgba(0,0,0, .5);
 }
 
-.menu {
-    padding: 30px 30px 0;
+.trigger {
+    display: none;
 }
 
-.actions {
-    display: flex;
-}
-
-.actions-inline {
-    margin-bottom: 30px;
-}
-
-.action-name {
-    margin-right: 30px;
-    padding-bottom: 10px;
-}
-
-.action-name:hover {
-    color: #D97E00;
-    cursor: pointer;
-}
-
-.trigger-pay:checked ~ .page .action-pay,
-.trigger-request:checked ~ .page .action-request,
-.trigger-payment-any:checked ~ .actions .payment-any,
-.trigger-payment-own:checked ~ .actions .payment-own {
-    border-bottom: 3px solid #F69C00;
-    color: #D97E00;
-    cursor: default;
-}
-
-.trigger-pay:checked ~ .page .payment,
-.trigger-request:checked ~ .page .request,
-.trigger-payment-any:checked ~ .any,
-.trigger-payment-own:checked ~ .own {
+.form__field {
+    margin-bottom: 15px;
     display: block;
 }
 
-.action {
-    display: none;
-    padding: 30px;
-}
-
-.fields {
-    margin: 60px 0;
-}
-
-.card-fields {
-    margin-left: 30px;
-}
-
-.form-label {
+.card-form__field__text {
     display: inline-block;
+    width: 10em;
 }
 
-.em12 {
-    width: 12em;
+.form__field__text {
+    display: inline-block;
+    width: 11em;
 }
 
-.form-input {
-    margin: 1px;
-    padding: 6px 9px;
+.items {
+    position: relative;
+    margin-bottom: 60px;
+    left: -15px;
+    top: 30px;
 
-    height: 20px;
-    width: 20em;
-
-    font: 16px 'Segoe UI Semilight';
-
-    border: 1px solid #e5e5e5;
-    border-radius: 1px;
-    box-shadow: inset 0 1px 4px -2px rgba(0,0,0,.25);
+    width: calc(100% + 30px);
 }
 
-.em9 {
-    width: 9em; 
+.item {
+    width: calc(25% - 30px);
+    min-width: 100px;
+    text-align: center;
+    margin: 15px;
 }
 
-.form-input::placeholder {
-    color: #999;
+.item__logo {
+    width: 100%;
 }
 
-.form-input:focus {
-    margin: 0;
-    border: 2px solid #F69C00;
-}
-
-.capture {
-    font-size: 14px;
-}
-
-.switch {
-    display: inline-flex;
-    padding-left: 2px;
-}
-
-.menu-small {
-    padding-bottom: 5px;
-}
-
-.card {
-    margin: 30px 0 auto;
-    padding: 100px 5px 5px;
-    border-radius: 5px;
-    width: 300px;
-    background-color: #e5e5e5;
-}
-
-.input100 {
-    width: calc(100% - 22px);
-}
-
-.any,
-.own {
-    display: none;
-}
-
-.em3 {
-    width: 3em;
-}
-
-.columns-2 {
+.footer {
+    padding: 15px 0;
     display: flex;
+    justify-content: center;
 }
 
-.column-1 {
-    flex: 1;
-}
-
-.about {
-    padding: 30px;
-}
-
-@media only screen and (max-width: 677px) {
-    .columns-2 {
+@media only screen and (max-width: 868px) {
+    .box__card-form {
         flex-direction: column;
     }
 
-    .column-1 {
-        flex: auto;
+    .box__form__card {
+        margin-bottom: 30px;
     }
-
-    .user-icon {
-        margin: 30px auto 0;
+    
+    .item {
+        width: calc(50% - 30px);
     }
+}
 
-    .form-label {
+@media only screen and (max-width: 546px) {
+    .form__field__text,
+    .card-form__field__text {
         display: block;
     }
 
-    .form-input {
-        width: calc(100% - 20px);
-    }
-
-    .switch {
-        width: calc(100% - 2px);
-    }
-
-    .nds18-button,
-    .nds10-button,
-    .nds0-button {
-        width: 100%;
-        text-align: center;
-        padding: 0;
-    }
-
-    .box {
-        margin: 0;
-        width: 100%;
-    }
-
-    .card {
-        width: 100%;
-        padding: 5px;
-    }
-
-    .card-fields {
-        margin: 0;
+    
+    .item {
+        width: calc(100% - 30px);
     }
 }
