--- a/index.css
+++ b/index.css
@@ -2,7 +2,11 @@
     margin: 0;
     font: 18px 'Segoe UI';
     background-color: #e5e5e5;
+
+    min-width: 380px;
 }
+
+/* ОСНОВНЫЕ */
 
 .header {
     position: sticky;
@@ -11,35 +15,6 @@
 
     padding: 0 30px;
     height: 48px;
-
-    color: #F69C00;
-}
-
-.capture {
-    font-size: 14px;
-    position: relative;
-    top: -10px;
-}
-
-.bg-gray {
-    background-color: #f2f2f2;
-}
-
-.title {
-    font-size: 20px;
-    font-weight: 600;
-    margin: 0;
-}
-
-.heading {
-    font: 32px 'Segoe UI Light';
-    line-height: 38px;
-    margin: 0;
-}
-
-.link {
-    text-decoration: none;
-    color: #D97E00;
 }
 
 .page {
@@ -52,70 +27,119 @@
     background-color: #fff;
 }
 
-.page__top-line {
-    border-top: 6px solid #F69C00;
-}
+/* BLOCK */
 
-.box__container {
-    box-shadow: inset 0 5px 3px -3px rgba(0,0,0,.25);
+.box__block {
     padding: 30px;
 }
 
-.box__first-container {
-    box-shadow: none;
+.box__block--white {
+    box-shadow: inset 0 5px 5px -3px rgba(0,0,0,.25),
+                inset 0 -5px 5px -3px rgba(0,0,0,.25);
+    background-color: #fff;
 }
 
-.box__block {
-    padding: 15px 0;
+.box__block--gray {
+    background-color: #f2f2f2;
 }
 
-.box__client-info__contacts,
-.box__form__fields {
-    flex: 1;
+.block__bottom-tabs {
+    position: relative;
+    top: 30px;
 }
 
-.box__client-info__user-icon {
+/* CONTACTS */
+
+.contact {
+    margin: 0 30px 0 0;
+}
+
+.user-icon {
     margin-left: auto;
     min-width: 160px;
     width: 160px;
     height: 160px;
 }
 
-.box__bottom-tabs {
-    position: relative;
-    top: 30px;
-    display: flex;
-}
+/* TABS */
 
-.box__tabs,
-.box__card-form,
-.box__client-info {
-    display: flex;
-}
-
-.box__form,
-.box__card-form {
-    padding: 30px 0 0;
-}
-
-.box__tab {
+.tab {
     margin-right: 30px;
     padding-bottom: 10px;
 }
 
-.box__tab:hover {
+.tab:hover {
     color: #D97E00;
     cursor: pointer;
 }
 
-.box__action-pay,
-.box__action-request,
-.box__payment-any,
-.box__payment-own {
+/* МИКСЫ */
+
+.vertical-margin {
+    margin: 15px 0;
+}
+
+.top-line {
+    border-top: 6px solid #F69C00;
+}
+
+.flex {
+    display: flex;
+}
+
+.flex-wrap {
+    flex-wrap: wrap;
+}
+
+.flex-max {
+    flex: 1;
+}
+
+.flex-center {
+    justify-content: center;
+}
+
+.hide {
     display: none;
 }
 
-.box__form__card {
+/* ТЕКСТ */
+
+.heading {
+    font: 30px 'Segoe UI Light';
+}
+
+.no-margin {
+    margin: 0;
+}
+
+.title {
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.accent-color {
+    color: #F69C00;
+}
+
+.link {
+    text-decoration: none;
+    color: #D97E00;
+}
+
+.capture {
+    font-size: 14px;
+    position: relative;
+    top: -10px;
+}
+
+/* FORM */
+
+.form {
+    margin: 30px 0;
+}
+
+.card-form__card {
     margin-right: 30px;
     padding: 110px 5px 5px;
     border-radius: 5px;
@@ -123,31 +147,51 @@
     background-color: #e5e5e5;
 }
 
-.trigger__action-pay:checked ~ .box__container .action-pay,
-.trigger__action-request:checked ~ .box__container .action-request,
-.trigger__payment-any:checked ~ .box__tabs .payment-any,
-.trigger__payment-own:checked ~ .box__tabs .payment-own {
+.field {
+    margin-bottom: 15px;
+    display: block;
+}
+
+.field__label {
+    display: inline-block;
+    width: 10em;
+}
+
+/* ACTIONS */
+
+.trigger--action-pay:checked ~ .box__block .tab--action-pay,
+.trigger--action-request:checked ~ .box__block .tab--action-request,
+.trigger--payment-any:checked ~ .block__tabs .tab--payment-any,
+.trigger--payment-own:checked ~ .block__tabs .tab--payment-own {
     border-bottom: 3px solid #F69C00;
     color: #D97E00;
     cursor: default;
 }
 
-.trigger__action-pay:checked ~ .box__action-pay,
-.trigger__action-request:checked ~ .box__action-request,
-.trigger__payment-any:checked ~ .box__payment-any,
-.trigger__payment-own:checked ~ .box__payment-own {
+.trigger--action-pay:checked ~ .box__block .tab-content--action-pay,
+.trigger--action-request:checked ~ .box__block .tab-content--action-request,
+.trigger--payment-any:checked ~ .tab-content--payment-any,
+.trigger--payment-own:checked ~ .tab-content--payment-own {
     display: block;
 }
 
-.contacts__line,
-.items {
-    flex-wrap: wrap;
-    display: flex;
+.button:hover:not(:disabled),
+.trigger--nds-18:checked ~ .box__block .nds-18,
+.trigger--nds-10:checked ~ .box__block .nds-10,
+.trigger--nds-0:checked ~ .box__block .nds-0 {
+    filter: brightness(90%);
 }
 
-.contact {
-    margin: 0 30px 0 0;
+.button:hover:active:not(:disabled),
+.trigger--nds-18:checked ~ .box__block .nds-18,
+.trigger--nds-10:checked ~ .box__block .nds-10,
+.trigger--nds-0:checked ~ .box__block .nds-0 {
+    box-shadow: 0 1px 0 0 rgba(0, 0, 0, .15),
+                0 0 0 1px rgba(0, 0, 0, .15),
+          inset 0 5px 10px -5px rgba(0,0,0, .5);
 }
+
+/* CUSTOM COMPONENTS */
 
 .button {
     height: 32px;
@@ -159,7 +203,17 @@
 
     border: none;
     border-radius: 1px;
-    box-shadow: 0 1px 0 0 rgba(0, 0, 0, .15), 0 0 0 1px rgba(0, 0, 0, .15);
+    box-shadow: 0 1px 0 0 rgba(0, 0, 0, .15),
+                0 0 0 1px rgba(0, 0, 0, .15);
+}
+
+.button--white:not(:disabled) {
+    background-image: linear-gradient(#fff, #ebebeb);
+}
+
+.button--accent:not(:disabled) {
+    background-image: linear-gradient(#F69C00, #D97E00);
+    color: #fff;
 }
 
 .switch {
@@ -167,12 +221,10 @@
     padding-left: 2px;
 }
 
-.input-text {
+.input {
     margin: 1px;
     padding: 6px 9px;
-
     height: 20px;
-    min-width: 244px;
 
     font: 16px 'Segoe UI Light';
 
@@ -183,75 +235,51 @@
     outline: none;
 }
 
-.input-text:focus {
+.input:focus {
     margin: 0;
     border: 2px solid #F69C00;
 }
 
-.input-text:invalid {
+.input:invalid {
     margin: 0;
     border: 2px solid #EE1722;
     background-color: #FFD7D7;
 }
 
-.input-date,
-.input-code {
-    min-width: auto;
+.input--3 {
     width: 3em;
 }
 
-.input-sum {
-    min-width: auto;
-    width: 7em;
+.input--5 {
+    width: 5em;
 }
 
-.card-form__input-comment,
-.card-form__input-email {
+.input--9 {
+    width: 9em;
+}
+
+.input--17 {
+    width: 17em;
+}
+
+.input--center {
+    text-align: center;
+    letter-spacing: .4em;
+}
+
+.input--full {
     width: calc(100% - 13em);
-}
-
-.white-button {
-    background-image: linear-gradient(#fff, #ebebeb);
-}
-
-.accent-button {
-    background-image: linear-gradient(#F69C00, #D97E00);
-    color: #fff;
-}
-
-.button:hover,
-.trigger__nds-18:checked ~ .box__container .nds-18,
-.trigger__nds-10:checked ~ .box__container .nds-10,
-.trigger__nds-0:checked ~ .box__container .nds-0 {
-    filter: brightness(90%);
-}
-
-.button:hover:active,
-.trigger__nds-18:checked ~ .box__container .nds-18,
-.trigger__nds-10:checked ~ .box__container .nds-10,
-.trigger__nds-0:checked ~ .box__container .nds-0 {
-    box-shadow: 0 1px 0 0 rgba(0, 0, 0, .15),
-                0 0 0 1px rgba(0, 0, 0, .15),
-          inset 0 5px 10px -5px rgba(0,0,0, .5);
 }
 
 .trigger {
     display: none;
 }
 
-.form__field {
-    margin-bottom: 15px;
-    display: block;
-}
+/* FOOTER */
 
-.card-form__field__text {
-    display: inline-block;
-    width: 10em;
-}
-
-.form__field__text {
-    display: inline-block;
-    width: 11em;
+.footer {
+    padding: 15px 0;
+    justify-content: center;
 }
 
 .items {
@@ -274,18 +302,14 @@
     width: 100%;
 }
 
-.footer {
-    padding: 15px 0;
-    display: flex;
-    justify-content: center;
-}
+/* MOBILE */
 
-@media only screen and (max-width: 868px) {
-    .box__card-form {
+@media only screen and (max-width: 774px) {
+    .card-form {
         flex-direction: column;
     }
 
-    .box__form__card {
+    .card-form__card {
         margin-bottom: 30px;
     }
     
@@ -295,20 +319,21 @@
 }
 
 @media only screen and (max-width: 546px) {
-    .form__field__text,
-    .card-form__field__text {
+    .field__label {
         display: block;
+    }
+
+    .input--7,
+    .input--9,
+    .input--full {
+        width: calc(100% - 20px);
     }
 
     .item {
         width: calc(100% - 30px);
     }
 
-    .box__client-info {
-        flex-direction: column;
-    }
-
-    .box__client-info__user-icon {
+    .user-icon {
         margin: 0 auto;
     }
 }
